kubernetes/radarr/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: movies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      restartPolicy: Always
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-media
              mountPath: /media
          ports:
            - containerPort: 7878
      volumes:
        - name: radarr-config
          hostPath:
            path: /home/thelegend27/homeserver/movies/radarr/config
        - name: radarr-media
          hostPath:
            path: /mnt/media
