kubernetes/radarr/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: movies
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - port: 7878
      name: http
