kubernetes/radarr/radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: movies
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Radarr
    gethomepage.dev/description: Movies
    gethomepage.dev/icon: radarr.png
    gethomepage.dev/group: Media Management
    gethomepage.dev/pod-selector: app=radarr
    gethomepage.dev/widget.type: radarr
    gethomepage.dev/widget.url: radarr.movies:7878
    gethomepage.dev/widget.key: ""
spec:
  # ingressClassName: caddy
  rules:
  - host: radarr.admin.thelegend27.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 7878
